# rasterizer

./: Cargo.toml  README.md
example/: Cargo.toml
example/example/src/: main.rs  window.rs
example/pixel_renderer/src/shaders/: compile.sh  old_frag.spv  shader-mess.frag
rasterizer/: Cargo.toml
rasterizer/src/: draw_line.rs  lib.rs  math.rs  rasterize.rs
