[package]
name = "example"
version = "0.1.0"
authors = ["F35 <f35idk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rasterizer]
path = "../rasterizer"

[dependencies.ash]
version = "0.30.0"

[dependencies.xcb]
version = "0.9.0"
default-features = false

[dependencies.xcb-util]
version = "0.3.0"
default-features = false
features = ["keysyms"]

[lib]
name = "pixel_renderer"
path = "pixel_renderer/src/lib.rs"

[[bin]]
name = "example"
path = "example/src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic="abort"
lto = true
codegen-units = 1
